[project]
name = "django-like-repositories"
version = "0.1.0"
description = ""
authors = [
    {name = "albertalexandrov",email = "albert-ugatu@list.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.1,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi-filter[sqlalchemy] (>=2.0.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ruff = "^0.11.12"
django = "^5.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
